idf_component_register(SRCS "gps_parser.c" "gps_app.c" "http_server.c" "wifi_app.c" "main.c" "app_nvs.c" "gps_app.c" "gps_parser.c"
                    INCLUDE_DIRS "."
                    EMBED_FILES "dist/assets/burros_blancos.png"
                                "dist/assets/index.css"
                                "dist/assets/index.js"
                                "dist/index.html")